; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_alloc_fixed.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_alloc_fixed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf = type { i32 }
%struct.net_buf_pool = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.net_buf_pool_fixed* }
%struct.net_buf_pool_fixed = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.net_buf* @net_buf_alloc_fixed(%struct.net_buf_pool* %0, i32 %1) #0 {
  %3 = alloca %struct.net_buf_pool*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_buf_pool_fixed*, align 8
  store %struct.net_buf_pool* %0, %struct.net_buf_pool** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.net_buf_pool*, %struct.net_buf_pool** %3, align 8
  %7 = getelementptr inbounds %struct.net_buf_pool, %struct.net_buf_pool* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.net_buf_pool_fixed*, %struct.net_buf_pool_fixed** %9, align 8
  store %struct.net_buf_pool_fixed* %10, %struct.net_buf_pool_fixed** %5, align 8
  %11 = load %struct.net_buf_pool*, %struct.net_buf_pool** %3, align 8
  %12 = load %struct.net_buf_pool_fixed*, %struct.net_buf_pool_fixed** %5, align 8
  %13 = getelementptr inbounds %struct.net_buf_pool_fixed, %struct.net_buf_pool_fixed* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call %struct.net_buf* @net_buf_alloc_len(%struct.net_buf_pool* %11, i32 %14, i32 %15)
  ret %struct.net_buf* %16
}

declare dso_local %struct.net_buf* @net_buf_alloc_len(%struct.net_buf_pool*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
